@@ -1,6 +1,15 @@
 2012-12-08	Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* Changelog: Fixed previous entry date.
 	* combat.cc: Fixed incorrect animation of slimes after they attacked.
+	* actors.*, combat.cc, monster.cc: De-hard-coded slime and sea-serpent
+	  shapes. Fixed incorrect sea serpent attack animation (with improvements
+	  over the original game).
+	* actors.cc, schedule.cc: Improvements to sitting down on barges. Facing of
+	  NPCs is preserved on more cases. Move aside now ignores facing when it
+	  determines if actor is sitting down, kneeling or lying down.
+	* gamewin.cc: Change party members to standing on teleport (barges could be
+	  activated by sitting on a barge, teleporting to another and activating
+	  the new barge).
 
 2012-12-07	Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* schedule.cc: Walk-to-schedule caused instances of the sit-on-air bug because
